fix: corrigido o security para podermos ter acesso ao front pelo deploy